fixes text jumping around issue

--- a/client/stylesheets/hackers.css
+++ b/client/stylesheets/hackers.css
@@ -17,7 +17,16 @@
 
 .person-card-icon img {
 	border-radius: 256px;
-	width: 100%;
+	width:100%;
+   height:100%;
+   display:block;
+   position:absolute;
+}
+
+.person-card-icon {
+	padding-bottom:100%;
+    height:0;
+    position:relative;
 }
 
 .person-card-desc {
